--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">A R STUDY DESK</string>
-    <string name="lostpassword">Do not have an account? Sign up <a href="https://arstudydesk.com/Signup" target="_top"></a></string>
+    <string name="lostpassword">Do not have an account? Sign up <a href="https://rayaanaravind.in/Signup/" target="_top"></a></string>
 
 </resources>
